# Lost-secuirty-local-llm-phone-evals

./: .gitignore  AGENTS.md  CLAUDE.md  MODEL_PROVENANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: AI_AUTHORED_TEST_AUDIT.md  AI_CODE_POLICY.md  DEVICE_SETUP_ANDROID.md  EVAL_DESIGN.md  HARDWARE_BASELINE.md  HARNESS_CATALOG.md  LEARNINGS.md  NEXT_OPERATOR_STEPS.md  PROOF_TEST_STANDARD.md  REVIEWER_QUICKSTART.md  RUNTIME_TARGETS_2026.md
phone_eval_kit/: __init__.py  cases.py  checks.py  cli.py  harnesses.py  proof.py  redaction.py  reporting.py  runner.py  schemas.py
phone_eval_kit/adapters/: __init__.py  base.py  fake.py  litert_lm.py  openai_compatible.py
phone_eval_kit/device/: __init__.py  adb.py
phone_eval_kit/evals/: performance.jsonl  safety.jsonl
tests/device/: test_device_snapshot.py
tests/proof/: test_proof_baseline.py
tests/unit/: test_cases.py  test_checks.py  test_cli.py  test_device_boundaries.py  test_harnesses.py  test_runner.py  test_whitespace_tool.py
tools/: check_whitespace.py  generate_report.py  proof_audit.py  scan_staged.py
